--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,22 @@
       })(window, document, "script", "dataLayer", "GTM-WMQXRTG7");
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-78DPEBJ82H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-78DPEBJ82H");
+    </script>
+    <!-- End Google tag (gtag.js) -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
